--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 							<li class="why__item">Encrypted and Secured</li>
 							<li class="why__item">Withdraw Anytime</li>
 						</ol>
-						<a type="button" class="button why__button">Learn More</a>
+						<a href="#" type="button" class="button why__button">Learn More</a>
 					</div>
 					<div class="why__image image-block">
 						<div class="image-block__item">
